Unexpected UX: Overlay popover window, scroll wheel selects controls, not scrolls #62777

Closed
opened 2019-03-20 14:38:56 +01:00 by Ian Finnimore · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 (sub 48), branch: master, commit date: 2019-03-15 00:41, hash: 388ff003e2
Worked: (optional)

Short description of error
The overlays popover window has enough that it runs into the bottom screen edge even at 1920x1080 with a marker indicating more below (normal).

Scroll wheel does not directly scroll the window, but sets mouse focus and subtle highlights the next edit control (hard to notice on check boxes). This highlighting is indicating mouse input capture only, as keyboard focus has not been moved to the control.

This scroll wheel select wraps around the list of controls, selecting the last control when running off top, and first when running off bottom.

This results in the unexpected experience behavior where the scroll wheel does not do consistent scrolling.

Examples of inconsistencies:
With the Overlays popover window freshly opened for each trial, try the following:

scroll wheel forward (UP) and the overlay window visible portion shifts DOWN to show the Freestyle section (Bottom).

scroll wheel back (DOWN), and no scrolling happens (mouse focus is moving between controls, subtle highlights only on check boxes, no highlights on enabled toggle buttons). scroll down long enough and eventually the hidden controls scroll into view. Continue scrolling down, which is highly likely since the wheel appears to be minimally reactive, and when the focus moves off the last control suddenly (and very jarring experience) the top of the popover window appears.

Recommended correction:
I realize since the popover does not have a scroll bar, the mechanics of scrolling were implemented differently, such as "shift control with focus into view".

Retaining that constraint, I would recommend the following:

  1. Scroll Up/Down selects the first obscured control in the scroll direction, not the next adjacent control.

  2. If there is no obscured control in the requested direction, do nothing (no wrapping)

Implemented in this manner, UX would match to expectations of scrolling the window, without the change of adding visible scroll bars.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 (sub 48), branch: master, commit date: 2019-03-15 00:41, hash: `388ff003e2` Worked: (optional) **Short description of error** The overlays popover window has enough that it runs into the bottom screen edge even at 1920x1080 with a marker indicating more below (normal). Scroll wheel does not directly scroll the window, but sets mouse focus and subtle highlights the next edit control (hard to notice on check boxes). This highlighting is indicating mouse input capture only, as keyboard focus has not been moved to the control. This scroll wheel select wraps around the list of controls, selecting the last control when running off top, and first when running off bottom. This results in the unexpected experience behavior where the scroll wheel does not do consistent scrolling. Examples of inconsistencies: With the Overlays popover window freshly opened for each trial, try the following: scroll wheel forward (UP) and the overlay window visible portion shifts DOWN to show the Freestyle section (Bottom). scroll wheel back (DOWN), and no scrolling happens (mouse focus is moving between controls, subtle highlights only on check boxes, no highlights on enabled toggle buttons). scroll down long enough and eventually the hidden controls scroll into view. Continue scrolling down, which is highly likely since the wheel appears to be minimally reactive, and when the focus moves off the last control suddenly (and very jarring experience) the top of the popover window appears. Recommended correction: I realize since the popover does not have a scroll bar, the mechanics of scrolling were implemented differently, such as "shift control with focus into view". Retaining that constraint, I would recommend the following: 1) Scroll Up/Down selects the first obscured control in the scroll direction, not the next adjacent control. 2) If there is no obscured control in the requested direction, do nothing (no wrapping) Implemented in this manner, UX would match to expectations of scrolling the window, without the change of adding visible scroll bars.
Author

Added subscriber: @IanFinn

Added subscriber: @IanFinn

This issue was referenced by 06585e0b13

This issue was referenced by 06585e0b133f1e94f0042d5f42da5810ebce4682

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62777
No description provided.